--- a/.github/workflows/go3.yaml
+++ b/.github/workflows/go3.yaml
@@ -2,8 +2,7 @@ name: Go_pull_request
 
 on:
   pull_request:
-    types:
-      - opened
+    types: [opened , reopened]
     branches:
       - 'two_workflow'
 
